--- a/app/views/bubble_categories/_form.html.erb
+++ b/app/views/bubble_categories/_form.html.erb
@@ -1,21 +1,27 @@
-<%= form_for(@bubble_category) do |f| %>
-  <% if @bubble_category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@bubble_category.errors.count, "error") %> prohibited this bubble_category from being saved:</h2>
+<%= render 'shared/section_title', title: @bubble_category.new_record? ? 'Create New Bubble Categoty' : 'Editing Bubble Category' %>
 
-      <ul>
-      <% @bubble_category.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="container kmSection">
+  <%= form_for(@bubble_category, html: {class: 'form-horizontal form-classic form-vpad'}) do |f| %>
+    <%= render 'shared/error_messages', object: @bubble_category %>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="form-group">
+          <%= f.label :name, "Name", class: "col-sm-4 control-label text-main" %>
+          <div class="col-sm-8">
+            <%= f.text_field :name, placeholder: 'Name', class: 'form-control' %>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="row text-center actions">
+      <%= link_to 'Back', bubble_categories_path, class: 'btn btn-danger btn-large btn-wide btn-simple' %>
+      <% if @bubble_category.new_record? %>
+        <%= f.submit 'Create Bubble Category', class: 'btn btn-info btn-large btn-wide btn-simple' %>
+      <% else %>
+        <%= link_to 'Show', @bubble_category, class: 'btn btn-warning btn-large btn-wide btn-simple' %>
+        <%= f.submit 'Update Bubble Category', class: 'btn btn-info btn-large btn-wide btn-simple' %>
       <% end %>
-      </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
