--- a/app/views/bubble_games/index.html.erb
+++ b/app/views/bubble_games/index.html.erb
@@ -1,33 +1,45 @@
-<h1>Bubble Games</h1>
+<%= render 'shared/section_title', title: 'Bubble Games' %>
+<div class="container kmSection">
+  <div class="row">
+    <div class="col-md-12">
+      <table class="table">
+        <thead>
+        <tr>
+          <th class="text-center minimal">Bubble</th>
+          <th class="text-center">Game</th>
+          <th class="text-center">Skin</th>
+          <th class="text-center">Game params</th>
+          <th class="text-center">Scoring params</th>
+          <th></th>
+        </tr>
+        </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Bubble</th>
-      <th>Game</th>
-      <th>Skin</th>
-      <th>Game params</th>
-      <th>Scoring params</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <tbody>
+        <% @bubble_games.each do |bubble_game| %>
+          <tr>
+            <td class="text-center minimal"><%= link_to bubble_game.bubble.try(:name), bubble_game.bubble %></td>
+            <td class="text-center"><%= link_to bubble_game.game.try(:name), bubble_game.game %></td>
+            <td class="text-center"><%= bubble_game.skin %></td>
+            <td class="text-center"><%= bubble_game.game_params %></td>
+            <td class="text-center"><%= bubble_game.scoring_params %></td>
+            <td class="actions minimal">
+              <%= link_to 'View', bubble_game, class: 'btn btn-info btn-simple btn-narrow' %>
+              <%= link_to 'Edit', edit_bubble_game_path(bubble_game), class: 'btn btn-warning btn-simple btn-narrow' %>
+              <%= link_to 'Delete', bubble_game, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-simple btn-narrow' %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-  <tbody>
-    <% @bubble_games.each do |bubble_game| %>
-      <tr>
-        <td><%= link_to bubble_game.bubble.try(:name), bubble_game.bubble %></td>
-        <td><%= link_to bubble_game.game.try(:name), bubble_game.game %></td>
-        <td><%= bubble_game.skin %></td>
-        <td><%= bubble_game.game_params %></td>
-        <td><%= bubble_game.scoring_params %></td>
-        <td><%= link_to 'Show', bubble_game %></td>
-        <td><%= link_to 'Edit', edit_bubble_game_path(bubble_game) %></td>
-        <td><%= link_to 'Destroy', bubble_game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Bubble game', new_bubble_game_path %>
+  <div class="row actions text-right">
+    <div class="col-md-12">
+      <%= link_to new_bubble_game_path, class: 'btn btn-warning btn-simple btn-large' do %>
+        <i class="fa fa-plus"></i>
+        <span>New Bubble Game</span>
+      <% end %>
+    </div>
+  </div>
+</div>
